<resources>
    <string name="app_name">ChatterBox</string>
    <string name="username">Username</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="register">Register</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="logout">Logout</string>
    <string name="verify_otp_message">We\'ve sent an OTP to verify your Mobile. Enter the OTP sent to</string>
    <string name="next">Next</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="message">Type message here</string>
    <string name="send">Send</string>
    <string name="send_image">Send Image</string>
</resources>
